Updated features section on course page

--- a/courses/javadsabootcamp.html
+++ b/courses/javadsabootcamp.html
@@ -1960,10 +1960,11 @@
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item bg-transparent"><i class="bx bx-time-five align-middle mb-1 me-2" style="font-size: 22px"></i><b>Duration : </b>2 Months</li>
-                            <li class="list-group-item bg-transparent"><i class="bx bx-award mb-1 me-2 align-middle" style="font-size: 22px"></i><b>Certificate :</b> Yes</li>
+                            <li class="list-group-item bg-transparent"><i class="bx bx-award mb-1 me-2 align-middle" style="font-size: 22px"></i><b>Certificate : </b>Yes</li>
                             <li class="list-group-item bg-transparent"><i class="bx bx-mouse align-middle mb-1 me-2" style="font-size: 22px"></i><b>Access : </b>Lifetime</li>
-                            <li class="list-group-item bg-transparent"><i class="bx bx-book align-middle mb-1 me-2" style="font-size: 22px"></i><b>No Prerequisites</b> Required</li>
-                            <li class="list-group-item bg-transparent"><i class="bx bx-pencil align-middle mb-1 me-2" style="font-size: 22px"></i><b>Notes </b>+<b> Assignments</b></li>
+                            <li class="list-group-item bg-transparent"><i class="bx bx-book align-middle mb-1 me-2" style="font-size: 22px"></i><b>Prerequisites : </b>No Prerequisites</li>
+                            <li class="list-group-item bg-transparent"><i class="bx bx-pencil align-middle mb-1 me-2" style="font-size: 22px"></i><b>Notes : </b>Yes</li>
+                            <li class="list-group-item bg-transparent"><i class="bx bx-pencil align-middle mb-1 me-2" style="font-size: 22px"></i><b>Assignments : </b>Yes</li>
                             <li class="list-group-item" style="text-align: center;"><a class="btn button" href="coursesmain/javadsabootcampmain.html" role="button">Access Course</a></li>
                         </ul>
                     </div>
