--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         <div class="member">
                             <img src="assets/img/team/team-2.jpg" alt="">
                             <h3>Rahul Rana</h3>
-                            <span>Co-founder and Product Manager</span>
+                            <span>Community Manager</span>
                             <p>
                                 Front-End Developer & Designer deeply passionate about User Experience, Open-Source & Software Innovations.
                             </p>
