--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
         <div class="container footer-bottom clearfix">
             <div class="cccopyright">
-                © Copyright <strong><span style="color: white; font-size: 17px">Community Classroom</span></strong>. All Rights Reserved
+                Credits to be added
             </div>
             <div class="copyright">
                 &copy; Copyright <strong><span>eNno</span></strong>. All Rights Reserved
