made code clean

--- a/course-single/java-dsa-bootcamp.html
+++ b/course-single/java-dsa-bootcamp.html
@@ -6,19 +6,15 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Community Classroom - Quality Education. Free for all.</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
 
     <!-- Favicons -->
     <link href="../assets/img/logo.png" rel="icon">
-    <link href="../assets/img/logo.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -45,23 +41,6 @@
                     <li><a class="nav-link" href="../index.html#universityleader">University Leader</a></li>
                     <li><a class="nav-link" href="../index.html#team">Team</a></li>
                     <li><a class="nav-link" href="../index.html#about">About Us</a></li>
-                    <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                 <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>-->
                     <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
                     <li><a class="getstarted" href="">Login/Signup</a></li>
                 </ul>
@@ -79,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 coursename-img">
-                    <img src="../assets/img/coursebanners/javadsabootcamp.jpg" class="img-fluid" style="height: 100%" alt="">
+                    <img src="../assets/img/course-banners/javadsabootcamp.jpg" class="img-fluid" style="height: 100%" alt="">
                 </div>
                 <div class="col-lg-1 dummy"></div>
                 <div class="col-lg-7 pt-5 pt-lg-0 d-flex flex-column justify-content-center" style="justify-content: center;">
@@ -96,15 +75,6 @@
     <!-- Page content -->
     <div class="container">
         <div class="row">
-
-
-
-
-
-
-
-
-
             <div class="col-lg-8 col-md-12 col-12 mt-4 mb-4 mb-lg-0">
                 <div class="card rounded-3 mb-lg-4">
                     <div class="card-header" style="background-color: darkblue">
@@ -1940,9 +1910,6 @@
                                             </li>
                                             <!-- END LIST 21 -->
 
-
-
-
                                         </ul>
                                     </div>
                                 </div>
@@ -1965,7 +1932,7 @@
                             <li class="list-group-item bg-transparent"><i class="bx bx-book align-middle mb-1 me-2" style="font-size: 22px"></i><b>Prerequisites : </b>No Prerequisites</li>
                             <li class="list-group-item bg-transparent"><i class="bx bx-pencil align-middle mb-1 me-2" style="font-size: 22px"></i><b>Notes : </b>Yes</li>
                             <li class="list-group-item bg-transparent"><i class="bx bx-pencil align-middle mb-1 me-2" style="font-size: 22px"></i><b>Assignments : </b>Yes</li>
-                            <li class="list-group-item" style="text-align: center;"><a class="btn button" href="coursesmain/javadsabootcampmain.html" role="button">Access Course</a></li>
+                            <li class="list-group-item" style="text-align: center;"><a class="btn button" href="course-content/java-dsa-bootcamp-content.html" role="button">Access Course</a></li>
                         </ul>
                     </div>
                 </div>
@@ -2008,13 +1975,13 @@
                     </div>
                     <div class="col-sm-3 foot2">
                         <h3>Contact Us:</h3>
-                        <span><i class='bx bxs-envelope'></i>kunal@commclassroom.org</span><br>
-                        <span><i class='bx bxl-youtube'></i><a href="https://www.youtube.com/c/KunalKushwaha">Subscribe our YouTube Channel</a></span><br>
+                        <span><i class='bx bxs-envelope'></i><a href="mailto:kunal@commclassroom.org">kunal@commclassroom.org</a></span><br>
+                        <span><i class='bx bxl-youtube'></i><a href="https://www.youtube.com/c/KunalKushwaha?sub_confirmation=1">Subscribe our YouTube Channel</a></span><br>
                         <span><i class='bx bxl-linkedin-square'></i><a href="https://www.linkedin.com/company/commclassroom">Follow us on LinkedIn</a></span><br>
                     </div>
                     <div class="col-sm-3 foot3">
-                        <h3>If you like our work, here our the things that you can do:</h3>
-                        <p># Like our videos <br> # Comment your views on our videos <br> # Share us on socials and also tag us</p>
+                        <h3>If you like our work, here are the things that you can do:</h3>
+                        <p><i class='bx bxs-like bx-xs'></i> Like our videos <br> <i class='bx bxs-comment bx-xs'></i> Comment your views on our videos <br> <i class='bx bxs-share-alt' ></i> Share us on socials and also tag us</p>
                     </div>
                 </div>
 
@@ -2029,10 +1996,9 @@
             </div>
         </div>
 
-
         <div class="container footer-bottom clearfix">
             <div class="cccopyright">
-                © Copyright <strong><span style="color: white; font-size: 17px">Community Classroom</span></strong>. All Rights Reserved
+                Credits to be added
             </div>
             <div class="copyright">
                 &copy; Copyright <strong><span>eNno</span></strong>. All Rights Reserved
@@ -2044,20 +2010,14 @@
     </footer>
     <!-- End Footer -->
 
-
-
-
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
     <script src="../assets/vendor/purecounter/purecounter.js"></script>
     <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/theme.min.js"></script>
 
 </body>
 
