--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Community Classroom - Quality Education. Free for all.</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/logo.png" rel="icon">
-    <link href="assets/img/logo.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -37,28 +33,11 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link active" href="">Home</a></li>
                     <li><a class="nav-link" href="courses.html">Courses</a></li>
                     <li><a class="nav-link scrollto" href="#universityleader">University Leader</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-                    <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                 <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>-->
                     <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
                     <li><a class="getstarted" href="">Login/Signup</a></li>
                 </ul>
@@ -80,7 +59,7 @@
                     <h2>We provide <b>FREE</b> hands-on training, mentorship and have an inclusive community.</h2>
                     <div class="d-flex">
                         <a href="courses.html" class="btn-courses">Explore Our Courses</a>
-                        <a href="https://www.youtube.com/watch?v=lMe7LmKqZMQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span></span></a>
+                        <a href="https://www.youtube.com/watch?v=lMe7LmKqZMQ" class="glightbox btn-watch-video"><i class="bx bx-play-circle"></i><span></span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img">
@@ -107,23 +86,23 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="coursecard">
-                            <img src="assets/img/coursebanners/javadsabootcamp.jpg" alt="">
+                            <img src="assets/img/course-banners/javadsabootcamp.jpg" alt="">
                             <h3>Java + DSA + Interview Preparation Bootcamp</h3>
-                            <a class="btn btn-primary button" href="courses/javadsabootcamp.html" role="button">Learn More</a>
+                            <a class="btn btn-primary button" href="course-single/java-dsa-bootcamp.html" role="button">Learn More</a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="coursecard">
-                            <img src="assets/img/coursebanners/gitandgithub.jpg" alt="">
+                            <img src="assets/img/course-banners/gitandgithub.jpg" alt="">
                             <h3>Complete Git and GitHub Tutorial</h3>
-                            <a class="btn btn-primary button" href="courses/gitandgithub.html" role="button">Learn More</a>
+                            <a class="btn btn-primary button" href="course-single/git-github.html" role="button">Learn More</a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="coursecard">
-                            <img src="assets/img/coursebanners/webdevelopment.jpg" alt="">
+                            <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
                             <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
@@ -429,13 +408,13 @@
                     </div>
                     <div class="col-sm-3 foot2">
                         <h3>Contact Us:</h3>
-                        <span><i class='bx bxs-envelope'></i>kunal@commclassroom.org</span><br>
-                        <span><i class='bx bxl-youtube'></i><a href="https://www.youtube.com/c/KunalKushwaha">Subscribe our YouTube Channel</a></span><br>
+                        <span><i class='bx bxs-envelope'></i><a href="mailto:kunal@commclassroom.org">kunal@commclassroom.org</a></span><br>
+                        <span><i class='bx bxl-youtube'></i><a href="https://www.youtube.com/c/KunalKushwaha?sub_confirmation=1">Subscribe our YouTube Channel</a></span><br>
                         <span><i class='bx bxl-linkedin-square'></i><a href="https://www.linkedin.com/company/commclassroom">Follow us on LinkedIn</a></span><br>
                     </div>
                     <div class="col-sm-3 foot3 align-self-center">
-                        <h3>If you like our work, here our the things that you can do:</h3>
-                        <p># Like our videos <br> # Comment your views on our videos <br> # Share us on socials and also tag us</p>
+                        <h3>If you like our work, here are the things that you can do:</h3>
+                        <p><i class='bx bxs-like bx-xs'></i> Like our videos <br> <i class='bx bxs-comment bx-xs'></i> Comment your views on our videos <br> <i class='bx bxs-share-alt' ></i> Share us on socials and also tag us</p>
                     </div>
                 </div>
 
@@ -464,15 +443,11 @@
     </footer>
     <!-- End Footer -->
 
-
-
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/purecounter/purecounter.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
