--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
                     <li><a class="getstarted" href="">Login/Signup</a></li>
                 </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
+                <i class="bx bx-list-ul mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
         </div>
@@ -443,7 +443,7 @@
     </footer>
     <!-- End Footer -->
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class='bx bxs-arrow-to-top'></i></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
