--- a/courses.html
+++ b/courses.html
@@ -41,7 +41,7 @@
                     <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
                     <li><a class="getstarted" href="">Login/Signup</a></li>
                 </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
+                <i class="bx bx-list-ul mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
         </div>
