--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img">
-                    <img src="assets/img/homepageillustration3.svg" class="img-fluid animated" alt="">
+                    <img src="assets/img/20200630_162659.gif" class="img-fluid animated" alt="">
                 </div>
             </div>
         </div>
