--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
                         <a href="https://www.youtube.com/watch?v=lMe7LmKqZMQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span></span></a>
                     </div>
                 </div>
-                <div id="ifMobile1" class="col-lg-6 order-1 order-lg-2 hero-img">
-                    <img src="assets/img/20200630_162659.gif" class="img-fluid animated" alt="">
+              
+                <div  id="ifMobile1" class="col-lg-6 order-1 order-lg-2 hero-img">
+                        <img src="assets/img/20200630_162659.gif" class="img-fluid animated image_full">
+                        <img src="assets/img/homepageillustration3.svg"  class="img-fluid image_mobile">
                 </div>
             </div>
         </div>
