made content load dynamic

--- a/courses.html
+++ b/courses.html
@@ -84,7 +84,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/javadsabootcamp.jpg" alt="">
                             <h3>Java + DSA + Interview Preparation Bootcamp</h3>
-                            <a class="btn btn-primary button" href="course-single/java-dsa-bootcamp.html" role="button">Learn More</a>
+                            <a class="btn btn-outline-primary button" href="course-single/java-dsa-bootcamp.html" role="button">Learn More</a>
                         </div>
                     </div>
 
@@ -92,7 +92,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/gitandgithub.jpg" alt="">
                             <h3>Complete Git and GitHub Tutorial</h3>
-                            <a class="btn btn-primary button" href="course-single/git-github.html" role="button">Learn More</a>
+                            <a class="btn btn-outline-primary button" href="course-single/git-github.html" role="button">Learn More</a>
                         </div>
                     </div>
 
@@ -100,7 +100,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
-                            <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
+                            <a class="btn btn-outline-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
                     </div>
 
@@ -108,7 +108,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
-                            <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
+                            <a class="btn btn-outline-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
                     </div>
 
@@ -116,7 +116,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
-                            <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
+                            <a class="btn btn-outline-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
                     </div>
 
@@ -124,7 +124,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
-                            <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
+                            <a class="btn btn-outline-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
                     </div>
                 </div>
