--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/javadsabootcamp.jpg" alt="">
                             <h3>Java + DSA + Interview Preparation Bootcamp</h3>
-                            <a class="btn btn-primary button" href="course-single/java-dsa-bootcamp.html" role="button">Learn More</a>
+                            <a class="btn btn-outline-primary button" href="course-single/java-dsa-bootcamp.html" role="button">Learn More</a>
                         </div>
                     </div>
 
@@ -96,7 +96,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/gitandgithub.jpg" alt="">
                             <h3>Complete Git and GitHub Tutorial</h3>
-                            <a class="btn btn-primary button" href="course-single/git-github.html" role="button">Learn More</a>
+                            <a class="btn btn-outline-primary button" href="course-single/git-github.html" role="button">Learn More</a>
                         </div>
                     </div>
 
@@ -104,7 +104,7 @@
                         <div class="coursecard">
                             <img src="assets/img/course-banners/webdevelopment.jpg" alt="">
                             <h3>Complete Web Development Bootcamp</h3>
-                            <a class="btn btn-danger button disabled" href="#" role="button">Coming Soon</a>
+                            <a class="btn btn-outline-danger button disabled" href="#" role="button">Coming Soon</a>
                         </div>
                     </div>
                     <div class="text-center"><a class="morecourses-btn" href="courses.html">Explore More Courses</a></div>
@@ -361,9 +361,9 @@
                                 Open-Source Enthusiast and Educator deeply passionate about Software Development Innovations.
                             </p>
                             <div class="social">
-                                <a href="https://twitter.com/kunalstwt"><i class="bi bi-twitter"></i></a>
-                                <a href="https://www.instagram.com/kunalsig/"><i class="bi bi-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/kunal-kushwaha"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://twitter.com/kunalstwt"><i class="bx bxl-twitter"></i></a>
+                                <a href="https://www.instagram.com/kunalsig/"><i class="bx bxl-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/kunal-kushwaha"><i class="bx bxl-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
