--- a/courses.html
+++ b/courses.html
@@ -29,7 +29,7 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html"><img src="assets/img/logo2.jpg" alt="" class="img-fluid"></a></h1>
+            <h1 class="logo"><a href="index.html"><img src="assets/img/logo2.jpg" alt=""></a></h1>
 
             <nav id="navbar" class="navbar">
                 <ul>
