--- a/courses.html
+++ b/courses.html
@@ -40,6 +40,7 @@
                     <li><a class="nav-link" href="index.html#about">About Us</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
                     <li><a class="getstarted" href="">Login/Signup</a></li>
+                    <li><a class="getstarted" href="">Profile</a></li>
                 </ul>
                 <i class="bx bx-list-ul mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
